config.js.example

--- a/config.js.example
+++ b/config.js.example
@@ -1,7 +1,7 @@
 define([ ], function () {
     return {
         telemetry: {
-            url: 'http://vm:3080/log',
+            url: 'http://localhost:3080/log',
             sharedObjectName: 'telemetry'
         }
     };
